@startuml

title __TYPES's Class Diagram__\n

  package types {
    class Elem {
        + key : int
        + data : T
        + Elem(data : T)
        + Elem(key : int, data : T)
        + toString() : String
    }
  }
  

  package types {
    class Node {
        - next : Node
        - elem : Elem
        + Node()
        + Node(elem : Elem)
        + getNext() : Node
        + setNext(next : Node)
        + getElem() : Elem
    }
  }
  

  package types {
    class Pos {
        + isValid : Boolean
        # pointer : T
        # set : SetInterface
        - previousIndex : Integer
        - nextIndex : Integer
        + Pos(pointer : T, set : SetInterface)
        + Pos(pointer : T, set : SetInterface, preI : int, nextI : int)
        + getPointer() : T
        + getPreviousIndex() : int
        + setPreviousIndex(preI : int)
        + setNextIndex(nextI : int)
        + getNextIndex() : int
        + getSet() : SetInterface
        + setPointer(pointer : Object)
    }
  }
  

  Elem o-- T : data
  Node o-- Node : next
  Node o-- Elem : elem
  Pos o-- T : pointer
  Pos o-- SetInterface : set


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
